--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 /*GENERAL SYLES*/
 html,
 body {
+    font-family: 'Raleway', sans-serif;
     font-size: 62.5%;
 }
 
